# Cursair_Code

./: .replit  main.py  pyproject.toml  requirements.txt
backend/: main.py
frontend/: main.py
